<resources>
    <string name="app_name">Preguntas y Respuestas</string>
    <string name="btn_jugar">Jugar</string>
    <string name="txt_usuario">Seleccione un usuario existente o da de alta uno nuevo</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="hint_usuario">Introduce Usuario</string>
    <string name="hint_contrasena">Introduce Contraseña</string>
    <string name="btn_CrearUsuario">Crear Usuario</string>
    <string name="btn_UsuarioExistente">Usuario Existente</string>
    <string name="txt_categoria">Seleccione una categoria</string>
    <string name="txt_jugadas">Seleccione un numero de preguntas</string>
    <string name="txt_tiempo">Seleccione el tiempo (en segundos)</string>
    <string name="btn_MtoUsuarios">Mantenimiento usuarios</string>
    <string name="btn_MtoPreguntas">Mantenimiento preguntas</string>
    <string name="txt_listadoUsuarios">Lista de Usuarios</string>
    <string name="btn_volver">Volver</string>
    <string name="txt_opcion">Seleccione la opcion deseada</string>
    <string name="btn_ver">Ver</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_borrar">Borrar</string>
    <string name="txt_idusuario">IdUsuario</string>
    <string name="txt_usuario2">Usuario</string>
    <string name="txt_password">Password</string>
    <string name="btn_Confirmar">Confirmar</string>
    <string name="txt_preguntas">Listado de preguntas</string>
    <string name="btn_altapreguntas">Nueva</string>
    <string name="btn_buscarpreguntas">Buscar</string>
    <string name="cd_verpregunta">Ver pregunta</string>
    <string name="cd_editarpregunta">Editar pregunta</string>
    <string name="cd_borrarpregunta">Borrar pregunta</string>
    <string name="txt_pregunta">Pregunta</string>
    <string name="txt_categoria2">Categoria</string>
    <string name="txt_respuestas">Respuestas</string>
    <string name="txt_solucion">Solucion</string>
    <string name="hint_pregunta">Introduce la pregunta</string>
    <string name="hint_respuesta">Introduce una posible respuesta</string>
    <string name="txt_contestar">Contestar</string>
    <string name="txt_pasar">Pasar</string>
    <string name="txt_aciertos">Aciertos</string>
    <string name="txt_errores">Errores</string>
    <string name="txt_hof">Hall Of Fame</string>
    <string name="txt_numpreguntas">Numero de preguntas</string>
    <string name="btn_otrapartida">Seguir Jugando</string>
    <string name="btn_salir">Salir del Juego</string>
    <string name="txt_cabecera_hof">Posición / Jugador / Ptos / Tiempo (sg)</string>
</resources>