<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".ListadoPreguntasActivity">

    <fragment
        android:id="@+id/fragment"
        android:name="ceep.cgl.pyr.CabeceraFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_cabecera" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_TituloPreguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/txt_preguntas"
            android:textSize="@dimen/ts_field" />

        <Button
            android:id="@+id/btn_AltaPreguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_altapreguntas" />

        <Button
            android:id="@+id/btn_Volver3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_Categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <Button
            android:id="@+id/btn_BuscarPreguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_buscarpreguntas" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_Preguntas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>