<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".NuevoJuegoActivity">

    <fragment
        android:id="@+id/fragment"
        android:name="ceep.cgl.pyr.CabeceraFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_cabecera"
        tools:layout_editor_absoluteX="68dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        android:text="@string/txt_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <Spinner
        android:id="@+id/sp_Categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        android:text="@string/txt_jugadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_Categoria" />

    <Spinner
        android:id="@+id/sp_Jugadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        android:text="@string/txt_tiempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_Jugadas" />

    <Spinner
        android:id="@+id/sp_Tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margen"
        android:layout_marginLeft="@dimen/et_margen"
        android:layout_marginTop="@dimen/et_margenTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_Jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_margenTop"
        android:text="@string/btn_jugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_Tiempo" />

</androidx.constraintlayout.widget.ConstraintLayout>